[package]
name = "kagi_examples"
version = "0.1.0"
edition = "2021"
description = "Examples for Kagi node system"
publish = false

[[example]]
name = "macros_example"
path = "macros_example.rs"

[[example]]
name = "macros_node_example"
path = "macros_node_example.rs"

[[example]]
name = "gateway_example"
path = "gateway_example.rs"

[[example]]
name = "rest_api_example"
path = "rest_api_example.rs"

[dependencies]
kagi_macros = { path = "../kagi_macros", features = ["node_implementation"] }
kagi_node = { path = "../node" }
kagi_common = { path = "../common" }
kagi_utils = { path = "../utils" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] } 