[package]
name = "runar-examples"
version = "0.1.0"
edition = "2021"
description = "Examples for the Runar framework"
authors = ["Runar Labs Team"]
publish = false

[dependencies]
runar_node = { path = "../rust-node" }
runar_common = { path = "../rust-common" }
runar_macros = { path = "../rust-macros" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
uuid = { version = "1.5", features = ["v4"] }
chrono = "0.4"

# The examples will automatically be discovered in the examples directory
# No need to explicitly list them when using the standard Cargo examples directory structure 